Update privacy policy HTML

--- a/index.html
+++ b/index.html
@@ -1,4 +1,74 @@
 <!DOCTYPE html>
 <html lang="ja">
-[... HTMLの内容 ...]
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>One minute output - Privacy Policy</title>
+    <style>
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+            line-height: 1.6;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        h1 {
+            border-bottom: 2px solid #eee;
+            padding-bottom: 10px;
+        }
+        h2 {
+            margin-top: 30px;
+            color: #333;
+        }
+    </style>
+</head>
+<body>
+    <h1>プライバシーポリシー</h1>
+
+    <h2>1. はじめに</h2>
+    <p>One minute output（以下「本アプリ」）は、個人開発アプリとしてユーザーのプライバシーを尊重し、個人情報の保護に努めます。</p>
+
+    <h2>2. 収集する情報</h2>
+    <p>本アプリでは、以下の情報を収集する場合があります：</p>
+    <ul>
+        <li>メールアドレス（プレミアム機能利用時のみ）</li>
+        <li>アプリ内で作成した手書きコンテンツ</li>
+        <li>プレミアム機能の購入履歴</li>
+    </ul>
+
+    <h2>3. 情報の利用目的</h2>
+    <p>収集した情報は、以下の目的でのみ利用します：</p>
+    <ul>
+        <li>プレミアム機能の提供</li>
+        <li>クラウド同期機能の提供</li>
+        <li>アプリの不具合対応</li>
+        <li>カスタマーサポート</li>
+    </ul>
+
+    <h2>4. 情報の保護</h2>
+    <p>以下の方法で情報を保護します：</p>
+    <ul>
+        <li>Firebaseを使用した安全な認証</li>
+        <li>データの暗号化</li>
+        <li>適切なアクセス制御</li>
+    </ul>
+
+    <h2>5. 第三者への提供</h2>
+    <p>収集した情報は、以下の場合を除き、第三者への提供は行いません：</p>
+    <ul>
+        <li>ユーザーの同意がある場合</li>
+        <li>法令に基づく場合</li>
+        <li>サービス提供に必要な外部サービス（Firebase、RevenueCat）との連携</li>
+    </ul>
+
+    <h2>6. お問い合わせ</h2>
+    <p>本プライバシーポリシーに関するお問い合わせは、以下までご連絡ください：</p>
+    <p>Email: mittsun.dev@gmail.com</p>
+
+    <h2>7. 改定</h2>
+    <p>本プライバシーポリシーは、必要に応じて改定されることがあります。<br>
+    重要な変更がある場合は、アプリ内で通知します。</p>
+
+    <p style="margin-top: 40px;">最終更新日：2024年3月20日</p>
+</body>
 </html>
